--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThreeJS Starter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Neha Bhandurge</h1>
+        <h1>Tushar Dongarwar</h1>
     </div>
     <canvas class="webgl"></canvas>
     <section></section>
+    <script type="text/javascript" src="three.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
