--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
+*
+{
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body
+{
+    height: 100vh;
+    font-family: 'Poppins';
+    background: rgb(24, 24, 24);
+}
+
+body{
+    overflow-x: hidden;
+}
+
+.webgl
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    outline: none;
+    mix-blend-mode: exclusion;
+}
+
+.container {
+    height: 100vh;
+    display: grid;
+    place-items:center;
+}
+
+h1 {
+    font-size: 8rem;
+    text-tranform: uppercase;
+    color: white;
+}
+
+section {height:100vh}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +48,6 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tushar Dongarwar</h1>
     </div>
     <canvas class="webgl"></canvas>
     <section></section>
